added links to drives and vods, plus minor edits

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ pre {
 
 <h1>Recap Programmation Graphique</h1>
 <pre>
+	Cette page est incomplète, et en principe les informations importantes sont ajoutées au fur et à mesure.
 	Les infos sur cette page sont à destination à la fois du cours de prog graphique des game progs et de math1 des game artists.
 
 	La priorité c'est d'écrire les sections utiles pour vos projets de construction de shaders pour l'examen, donc : 
@@ -137,56 +138,55 @@ pre {
 			-luminosité
 			-animation
 			-transparence
-			-éclairage direct
-			-outlines
-			-dithering
-			-eau
+			//-éclairage direct
+			//-outlines
+			//-dithering
+			//-eau
 		-comment faire une vidéo
 		
-	Si il y a des sections dédiées Game Prog ou Game Art, elles auront respectivement un fond bleu (GP), ou vert (GA).
+	//Si il y a des sections dédiées Game Prog ou Game Art, elles auront respectivement un fond bleu (GP), ou vert (GA).
 </pre>
 <h2>Ressources</h2><pre>
-	disponibles sur drive ou par demande via mail / discord.
+	La majorité de ces ressources sont incomplètes, et ont surtout servi pour dépanner, mais il y a certains liens qui sont plutôt précieux.
 
 	datant de 2021-2022
-		-graph prog 
-			-dossier drive "Graph Prog B3GP 2021-22"
-				-assets
-				-bibliographie du cours de graph prog
-		-math1 
-			-dossier drive "Math1 B2GA 2021-22"
-				-recap minimal de cours seulement, incomplet
-		-math2
-			-dossier drive "Math2 B3GA 2021-22"
-				-assets
-				-screenshots
-				-recap minimal de cours seulement, incomplet
+		
+		<a href="https://drive.google.com/drive/folders/1uDwt-5rYTaBfC4DaKvX9IerYHEomOKGP?usp=sharing">drive Graph Prog B3GP</a>
+			-assets
+			-[très recommandé] <a href="https://docs.google.com/document/d/1xPr0eFi6m05msx78PS6KPQj4qOweZsQLF1QqdaMz-tQ/edit?usp=sharing">bibliographie du cours de graph prog</a>		
+		<!-- <a href="https://drive.google.com/drive/folders/1m217ii1e02sbfaIpU_fTEFIUz6VYVOZC?usp=sharing">drive "Math1 B2GA"</a> (vide)
+			-recap minimal de cours seulement, incomplet -->		
+		<a href="https://drive.google.com/drive/folders/1cyUmJCPIKmXFVPWtRug2SfOaBcQl70aE?usp=sharing">drive Math2 B3GA</a>
+			-assets
+			-screenshots
+			-recap minimal de cours seulement, incomplet
+	
 	datant de 2019-2021
-		-math1 B3 2019-2020 
-			-dossier drive "Shadergraph B3GA 2019-2020"
-				-docs écrits (obsolètes avec des erreurs)
-				-assets
-				-screenshots
-		-math1 B2 2019-2021
-			-dossier drive "Shadergraph B2GA"
-				-google site
-				-vidéos de cours, assez courtes (intro manquante)
-				-assets
-				-screenshots
-			-VODs youtube de cours complètes de math1 2020-2021
-		-animation procédurale 2019-2021
-			-dossier drive "Proc Anim"
-				-google site
-					recap minimal de cours seulement, incomplet
-				-assets
-				-screenshots
-			-VODs youtube de cours complètes d'animation procédurale 2020-2021
-		-level design procédural B3 2020-2021
-			-dossier drive "Proc LD B3 2020-2021"
-				-google site 
-					-bibliographie
-					-recap minimal de cours seulement, incomplet
-				-projet + guide d'utilisation
+		
+		<a href="https://drive.google.com/drive/folders/1VkOukCfS4WHIoL-kPhH7YPvAS-0DFlYW?usp=sharing">drive math1 Shadergraph B3GA 2019-2020</a>
+			-docs écrits vaguement complets mais obsolètes avec des quelques erreurs
+			-assets
+			-screenshots
+		
+		<a href="https://drive.google.com/drive/folders/13s49szmxI_VnfaoxrDDc2xi6D5bmnITD?usp=sharing">drive math1 Shadergraph B2GA 2019-2021</a>
+			inclut un <a href="https://sites.google.com/rubika-edu.com/shadergraph-ga-2020/consignes?authuser=1">google site</a>
+			-vidéos de cours, assez courtes (intro manquante)
+			-assets
+			-screenshots
+		<a href="https://youtube.com/playlist?list=PLZukuIdj_40VFeO7VKJ5TDSXEDRlRM9tj">cours distanciel entier de math1 2020-2021</a>
+		
+		<a href="https://drive.google.com/drive/folders/1bCkDgSW9qnr9gZL-g7MlrNzEBANQdHfw?usp=sharing">drive animation procédurale B3GA 2019-2021</a>
+			inclut un <a href="https://sites.google.com/rubika-edu.com/proc-anim/table-des-mati%C3%A8res?authuser=1">google site</a>
+				recap minimal de cours seulement, incomplet
+			-assets
+			-screenshots
+		<a href="https://youtube.com/playlist?list=PLZukuIdj_40X4ZoJFZC6zXcLS6Qpf5GpR">cours distanciel entier d'animation procédurale 2020-2021</a>
+		
+		<a href="https://drive.google.com/drive/folders/1IXcRAXniwDOGgeYXk1I90bwApRJbqBXr?usp=sharing">drive level design procédural B3GA 2020-2021</a>
+			inclut un <a href="https://sites.google.com/rubika-edu.com/level-design-procedural/accueil?authuser=1">google site</a>
+				-bibliographie
+				-recap minimal de cours seulement, incomplet
+			-projet + guide d'utilisation
 			
 </pre><h2>Versions de Unity</h2><pre>
 	La version actuelle des cours se passe sur 2021.1
@@ -357,36 +357,36 @@ pre {
 				Rendu multi-passe (voir au travers des murs, contours doux, ...)
 				Post-processing (profondeur de champ, bloom, tone-mapping, ...)
 		
-		-Quelques tutoriels ShaderGraph Populaires de 2019
-			Brackeys
-				<a href="https://www.youtube.com/watch?v=KGGB5LFEejg">HOLOGRAM using Unity Shader Graph</a>
-				<a href="https://www.youtube.com/watch?v=NiOGWZXBg4Y">FORCE FIELD in Unity - SHADER GRAPH</a>
-				<a href="https://www.youtube.com/watch?v=taMp1g1pBeE">DISSOLVE using Unity Shader Graph</a>
-				
-			Gabriel Aguiar Prod.
-				<a href="https://www.youtube.com/watch?v=hTJqo1HeEOs">Unity Shader Graph - Shield Effect Tutorial</a>
-				<a href="https://www.youtube.com/watch?v=yJ0NRr-DdYU">Unity Shader Graph - Waterfall Effect Tutorial</a>
-				<a href="https://www.youtube.com/watch?v=glSsaRpHKos">Unity Shader Graph - Fire Flames Shader Tutorial</a>
-				<a href="https://www.youtube.com/watch?v=28MQrE7fUk4">Unity Shader Graph - Nuke Explosion Effect Tutorial</a>
-				<a href="https://www.youtube.com/watch?v=w0znZIuvQ2I">Unity Shader Graph - Portal Shader Tutorial</a>
-				<a href="https://www.youtube.com/watch?v=Qyh9RPxeKcA">Unity Shader Graph - Tornado Shader Effect Tutorial</a>
-				<a href="https://www.youtube.com/watch?v=u9lOaPVtSqg">Unity Shader Graph - Electricity Shader Effect Tutorial</a>
-				<a href="https://www.youtube.com/watch?v=mGd3nYXj1Oc">Unity Shader Graph - Laser Beam Tutorial</a>
+</pre><h2>Quelques tutoriels ShaderGraph Populaires de 2019</h2><pre>
+		Brackeys
+			<a href="https://www.youtube.com/watch?v=KGGB5LFEejg">HOLOGRAM using Unity Shader Graph</a>
+			<a href="https://www.youtube.com/watch?v=NiOGWZXBg4Y">FORCE FIELD in Unity - SHADER GRAPH</a>
+			<a href="https://www.youtube.com/watch?v=taMp1g1pBeE">DISSOLVE using Unity Shader Graph</a>
+			
+		Gabriel Aguiar Prod.
+			<a href="https://www.youtube.com/watch?v=hTJqo1HeEOs">Unity Shader Graph - Shield Effect Tutorial</a>
+			<a href="https://www.youtube.com/watch?v=yJ0NRr-DdYU">Unity Shader Graph - Waterfall Effect Tutorial</a>
+			<a href="https://www.youtube.com/watch?v=glSsaRpHKos">Unity Shader Graph - Fire Flames Shader Tutorial</a>
+			<a href="https://www.youtube.com/watch?v=28MQrE7fUk4">Unity Shader Graph - Nuke Explosion Effect Tutorial</a>
+			<a href="https://www.youtube.com/watch?v=w0znZIuvQ2I">Unity Shader Graph - Portal Shader Tutorial</a>
+			<a href="https://www.youtube.com/watch?v=Qyh9RPxeKcA">Unity Shader Graph - Tornado Shader Effect Tutorial</a>
+			<a href="https://www.youtube.com/watch?v=u9lOaPVtSqg">Unity Shader Graph - Electricity Shader Effect Tutorial</a>
+			<a href="https://www.youtube.com/watch?v=mGd3nYXj1Oc">Unity Shader Graph - Laser Beam Tutorial</a>
 
-			Binary Impact
-				<a href="https://www.youtube.com/watch?v=rlGNbq5p5CQ">Unity Shadergraph Tutorial - Cracked Ice</a>			
+		Binary Impact
+			<a href="https://www.youtube.com/watch?v=rlGNbq5p5CQ">Unity Shadergraph Tutorial - Cracked Ice</a>			
 
-			Code Monkey
-				<a href="https://www.youtube.com/watch?v=6AKR4b4C5j">Shield Force Field - Shader Graph Tutorial</a>
+		Code Monkey
+			<a href="https://www.youtube.com/watch?v=6AKR4b4C5j">Shield Force Field - Shader Graph Tutorial</a>
 
-			AE Tuts
-				<a href="https://www.youtube.com/watch?v=IzvKGsdByFk">Water ball explosion using shader graph Unity 3D</a>
-				<a href="https://www.youtube.com/watch?v=nhYrtvT543w">Water fountain using shader graph (part ½)</a>
-				<a href="https://www.youtube.com/watch?v=EELbMlnOzQE">Glass/Water Refractive Shader in Unity using Shader Graph</a>
+		AE Tuts
+			<a href="https://www.youtube.com/watch?v=IzvKGsdByFk">Water ball explosion using shader graph Unity 3D</a>
+			<a href="https://www.youtube.com/watch?v=nhYrtvT543w">Water fountain using shader graph (part ½)</a>
+			<a href="https://www.youtube.com/watch?v=EELbMlnOzQE">Glass/Water Refractive Shader in Unity using Shader Graph</a>
 
-			PolyToots
-				<a href="https://www.youtube.com/watch?v=WdxBJVCBr_A">Unity Shader Graph: Crystals!</a>
-				<a href="https://www.youtube.com/watch?v=r1yrkZn1owg&t=524s">[Part 2] Burning + Dissolve Shader in Unity.</a>
+		PolyToots
+			<a href="https://www.youtube.com/watch?v=WdxBJVCBr_A">Unity Shader Graph: Crystals!</a>
+			<a href="https://www.youtube.com/watch?v=r1yrkZn1owg&t=524s">[Part 2] Burning + Dissolve Shader in Unity.</a>
 
 	
 </pre>
@@ -656,10 +656,10 @@ pre {
 			-les options des propriétés du blackboard ne sont plus listées sous les propriétés elles-mêmes,
 				mais dans l'onglet node settings du panneau graph inspector
 			-...
-		-certains soucis abordés n'existent plus
+		<!-- -certains soucis abordés n'existent plus
 			-souci avec la différence entre nom de property et référence de property dans le blackboard
 			-performances de l'interface quand on anime via la fenêtre animation
-			-...
+			-... -->
 		-certains nodes fonctionnent différemment
 			-flipbook
 				-modulo automatique
