links to gprog vods

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 			-animation
 			-transparence
 			-éclairage direct
-			-outlines
+			//-outlines
 			//-dithering
-			-eau
+			//-eau
 		-comment faire une vidéo		
 	<!-- //Si il y a des sections dédiées Game Prog ou Game Art, elles auront respectivement un fond bleu (GP), ou vert (GA). -->
 </pre>
@@ -154,19 +154,30 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 	datant de 2021-2022
 		
 		<a href="https://drive.google.com/drive/folders/1uDwt-5rYTaBfC4DaKvX9IerYHEomOKGP?usp=sharing">drive Graph Prog B3GP</a>
-			-assets
-			-[très recommandé] <a href="https://docs.google.com/document/d/1xPr0eFi6m05msx78PS6KPQj4qOweZsQLF1QqdaMz-tQ/edit?usp=sharing">bibliographie du cours de graph prog</a>		
+			-assets		
+			-[très recommandé] <a href="https://docs.google.com/document/d/1xPr0eFi6m05msx78PS6KPQj4qOweZsQLF1QqdaMz-tQ/edit?usp=sharing">bibliographie du cours de graph prog</a>	
+		<a href="https://drive.google.com/drive/folders/1OeNhi4nBg31hGPr9PHuUkA8cCm3jbGn5?usp=sharing">Replay de cours distanciel sur les shaders</a>
+			Jour4:
+				ShaderGraph
+				ShaderLab
+				Textures
+				Couleur
+				Transparence
+				Cascade de Lave
+			Jour5:
+				Phong Shading (3 vidéos)
+				Cel Shading + Outlines (1 vidéo)
+			Jour6:
+				Eau
 		<!-- <a href="https://drive.google.com/drive/folders/1m217ii1e02sbfaIpU_fTEFIUz6VYVOZC?usp=sharing">drive "Math1 B2GA"</a> (vide)
 			-recap minimal de cours seulement, incomplet -->		
-		<a href="https://drive.google.com/drive/folders/1cyUmJCPIKmXFVPWtRug2SfOaBcQl70aE?usp=sharing">drive Math2 B3GA</a>
+		<a href="https://drive.google.com/drive/folders/1cyUmJCPIKmXFVPWtRug2SfOaBcQl70aE?usp=sharing">drive Math2 B3GA</a> (recap minimal de cours seulement, incomplet)
 			-assets
 			-screenshots
-			-recap minimal de cours seulement, incomplet
 	
 	datant de 2019-2021
 		
-		<a href="https://drive.google.com/drive/folders/1VkOukCfS4WHIoL-kPhH7YPvAS-0DFlYW?usp=sharing">drive math1 Shadergraph B3GA 2019-2020</a>
-			-docs écrits vaguement complets mais obsolètes avec des quelques erreurs
+		<a href="https://drive.google.com/drive/folders/1VkOukCfS4WHIoL-kPhH7YPvAS-0DFlYW?usp=sharing">drive math1 Shadergraph B3GA 2019-2020</a> (docs écrits vaguement complets mais obsolètes avec des quelques erreurs)
 			-assets
 			-screenshots
 		
@@ -393,7 +404,7 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 	
 </pre>
 <h2>Les étapes du render pipeline</h2>
-<button type="button" class="collapsible">[incomplet] +</button>
+<button type="button" class="collapsible">[TODO] +</button>
 <div class="content">
 <pre>
 	
@@ -1252,6 +1263,8 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 </pre><h2>Éclairage direct</h2><pre>
 	<a href="https://docs.google.com/document/d/1pkAA0FkpNavgtoPLtIk4Z-p3iFoPKCcclpU_e-i6BH8/edit?usp=sharing">DOC DE COURS</a>
 	
+	Pour dépanner : CF les différentes VODs de cours (graph prog, ou années précédentes)
+	
 	-Phong shading
 		//todo
 		-éclairage oldschool
@@ -1271,6 +1284,8 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 	//todo
 		
 </pre><h2>Cel Shading</h2><pre>
+	Pour dépanner : CF les différentes VODs de cours (graph prog, ou années précédentes)
+
 	//todo link video + écrire transcript
 	
 	-exemples
@@ -1294,6 +1309,8 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 		//todo
 			
 </pre><h2>Outlines</h2><pre>
+	Pour dépanner : CF les différentes VODs de cours (graph prog, ou années précédentes)
+
 	//todo 	
 	-exemples
 		-Okami
@@ -1323,8 +1340,12 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 	//todo
 		
 </pre><h2>Dithering</h2><pre>
+	Pour dépanner : CF les différentes VODs de cours (années précédentes)
+
 	//todo link video
-</pre><h2>Eau</h2><pre>
+</pre><h2>Eau</h2><pre>	
+	Pour dépanner : CF les différentes VODs de cours (graph prog, ou années précédentes)
+	
 	//todo
 	-sur le Pipeline Asset, cocher Depth Texture et Opaque Texture
 		-ça sera nécessaire pour faire fonctionner les nodes 
