fix in section on version

--- a/index.html
+++ b/index.html
@@ -202,12 +202,8 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 			-projet + guide d'utilisation
 			
 </pre><h2>Versions de Unity</h2><pre>
-	La version actuelle des cours se passe sur 2021.1
-	
-	Pipeline de rendu built-in (BIRP) vs URP vs HDRP
-		//todo : blabla intro présentation
-			
-		On travaille avec URP parce que HDRP fonctionne pas sur mobile.
+	La version actuelle des cours se passe sur 2021.1.			
+	On travaille avec URP.
 			
 </pre>
 <h2>Le rendu et les shaders, définitions</h2>
