intro title readability fix

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ PAGE TESTÉE SUR FIREFOX 95 SUR WIN10
 	On travaille avec URP.
 			
 </pre>
-<h2>Le rendu et les shaders, définitions</h2>
+<h2>Intro : Le rendu et les shaders, définitions</h2>
 <pre>
 	Le rendu consiste à obtenir l'image d'une scène du point de vue d'une caméra.
 		Mais on peut aussi faire le rendu d'objets individuels.
